--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^7.5.0",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "pug": "2.0.0-beta11"
   }
 }
